--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,14 @@
 # Required
 version: 2
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
+    nodejs: "18"
+    rust: "1.64"
+    golang: "1.19"
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
